--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,10 @@
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
-      <plugin>
+		
+		
+       <!--Commented out for Heroku
+	   <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
         <executions>
@@ -173,7 +176,7 @@
           </generateGitPropertiesFilename>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
         </configuration>
-      </plugin>
+      </plugin>-->
 
       <plugin>
         <groupId>ro.isdc.wro4j</groupId>
@@ -207,6 +210,19 @@
           </dependency>
         </dependencies>
       </plugin>
+	  
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-dependency-plugin</artifactId>
+		<version>2.4</version>
+		<executions>
+			<execution>
+				<id>copy-dependencies</id>
+				<phase>package</phase>
+				<goals><goal>copy-dependencies</goal></goals>
+			</execution>
+		</executions>
+	</plugin>
     </plugins>
   </build>
 
